# bumpalicious-test

./: CHANGELOG.md  LICENSE  README.md  package.json
deno-json/: CHANGELOG.md  deno.json  update.md
deno-jsonc/: CHANGELOG.md  deno.jsonc  update.md
deno-jsr/: CHANGELOG.md  jsr.json  update.md
deno-package/: CHANGELOG.md  package.json  update.md
deno-project-json/: deno.json  update.md
deno-project-jsonc/: deno.jsonc  update.md
deno-project-jsr/: jsr.json  update.md
go-go/: version.go
go-mod/: CHANGELOG.md  go.mod  update.md
go-project-go/: update.md
go-project-txt/: update.md
go-version/: CHANGELOG.md  go.mod  update.md  version.go
node-jsr/: CHANGELOG.md  jsr.json  update.md
node-package/: CHANGELOG.md  package.json  update.md
node-project-jsr/: jsr.json  update.md
node-project-package/: package.json  update.md
python-init-py/: CHANGELOG.md  __init__.py  update.md
python-poetry/: CHANGELOG.md  poetry.toml  update.md
python-project-setup-cfg/: setup.cfg  update.md
python-project-setup-py/: setup.py  update.md
python-project-toml/: update.md
python-setup-cfg/: CHANGELOG.md  setup.cfg  update.md
python-setup-py/: CHANGELOG.md  setup.py  update.md
python-toml/: CHANGELOG.md  pyproject.toml  update.md
rust/: CHANGELOG.md  Cargo.toml  update.md
rust-project/: update.md
text-project/: update.md
workspaces1/: CHANGELOG.md  README.md  package.json
workspaces2/: README.md  package.json
zig-project/: build.zig  update.md
zig-project-zon/: update.md
zig-zon/: CHANGELOG.md  build.zig  build.zig.zon  update.md
(+1 files in other folders)
