[project]
name = "python-toml"
version = "1.0.3"
description = "Test project for Bumpalicious GitHub Action"
readme = "README.md"
requires-python = ">=3.7"

  [[project.authors]]
  name = "Test Author"
  email = "test@example.com"

  [project.license]
  text = "MIT"

[build-system]
requires = [ "setuptools>=42", "wheel" ]
build-backend = "setuptools.build_meta"
